feat(routes): add zod schema validations
